--- a/ankimorphs/ui/settings_dialog.ui
+++ b/ankimorphs/ui/settings_dialog.ui
@@ -22,7 +22,7 @@
      <item>
       <widget class="QTabWidget" name="tabWidget">
        <property name="currentIndex">
-        <number>1</number>
+        <number>5</number>
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
@@ -684,16 +684,28 @@
          <item>
           <layout class="QVBoxLayout" name="verticalLayout_11">
            <item>
+            <widget class="QLabel" name="label_43">
+             <property name="font">
+              <font>
+               <bold>true</bold>
+              </font>
+             </property>
+             <property name="text">
+              <string>Encountering cards during study sessions:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QCheckBox" name="skipKnownCheckBox">
              <property name="text">
-              <string>Skip cards with only known morphs</string>
+              <string>Skip (bury) cards with only known morphs</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QCheckBox" name="skipAlreadySeenCheckBox">
              <property name="text">
-              <string>Skip cards that have unknown morphs already seen today</string>
+              <string>Skip (bury) cards that have unknown morphs already seen today</string>
              </property>
             </widget>
            </item>
@@ -711,6 +723,18 @@
            <property name="topMargin">
             <number>10</number>
            </property>
+           <item>
+            <widget class="QLabel" name="label_44">
+             <property name="font">
+              <font>
+               <bold>true</bold>
+              </font>
+             </property>
+             <property name="text">
+              <string>On recalc:</string>
+             </property>
+            </widget>
+           </item>
            <item>
             <widget class="QCheckBox" name="recalcSuspendKnownCheckBox">
              <property name="text">
